<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fdfdfd"
            android:gravity="center_vertical|end"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_blank"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="#fdfdfd"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/x"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_divide"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btn_multi"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/txt_multi"

            />
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:backgroundTint="#fdfdfd"
            android:textColor="@color/black"
            android:onClick="calculate"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_clear"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="calculate"
            android:text="@string/txt_seven"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="calculate"
            android:text="@string/txt_eight"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="calculate"
            android:text="@string/txt_nine"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:backgroundTint="#fdfdfd"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_minus"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="#fdfdfd"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/txt_four"
            android:onClick="calculate"/>

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_five"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:onClick="calculate"/>

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_six"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:onClick="calculate"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:backgroundTint="#fdfdfd"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_plus"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_one"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:onClick="calculate"/>

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_two"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:onClick="calculate"/>

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_three"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:onClick="calculate"/>
        <Button
            android:id="@+id/btn_percentage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:backgroundTint="#fdfdfd"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_percentage"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:backgroundTint="#fdfdfd"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/txt_equal"/>

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="calculate"
            android:text="@string/txt_zero"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#fdfdfd"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="calculate"
            android:text="@string/txt_dot"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>